@@ -1,3 +1,9 @@
+import _root_.sbt._
+import _root_.sbt._
+import _root_.sbt.IvyActions
+import _root_.sbt.IvySbt
+import _root_.sbt.Logger
+import _root_.sbt.MakePom
 import sbt._
 import Keys._
 import java.io.File
@@ -5,30 +11,19 @@ import java.io.File
 
 object StarlingBuild extends Build{
 
+  val amqpVersion = "1.7.2"
+
   import Utils._
 
   val starlingVersion = {
     val r = System.getProperty("build.number")
-    if (r == null) "0.1" else r
+    if (r == null) "SNAPSHOT" else r
   }
 
   println("")
   println("This is the build number: " + starlingVersion)
   println("")
 
-  val useTitanModelBinaries = {
-    if (!new File("props.conf").exists)
-      false
-    else {
-      val serverSettingRegexp = """^ServerType\s*=\s*(\w+)\s*$""".r
-      scala.io.Source.fromFile("props.conf").getLines.toList.collect {
-        case serverSettingRegexp(serverType) => serverType
-      } match {
-        case List("FC2") => false
-        case _ => true
-      }
-    }
-  }
   def lib_managed_jars(base : File) : Seq[Attributed[File]] = (((base / "lib_managed") ** "*.jar")).getFiles.map{f : File => Attributed.blank(f)}
   lazy val standardSettings = Defaults.defaultSettings ++ Seq(
     unmanagedSourceDirectories in Compile <+= baseDirectory(_/"src"),
@@ -53,7 +48,20 @@ object StarlingBuild extends Build{
     shellPrompt  := ShellPrompt.buildShellPrompt
   )
 
+  class OverrideMakePom extends MakePom {
+    override def isValidIDCharacter(c: Char) = true
+  }
+
+  def overrideMakePom(module: IvySbt#Module, configuration: MakePomConfiguration, log: Logger) {
+		import configuration.{allRepositories, moduleInfo, configurations, extra, file, filterRepositories, process}
+		module.withModule(log) { (ivy, md, default) =>
+			(new OverrideMakePom()).write(ivy, md, moduleInfo, configurations, extra, process, filterRepositories, allRepositories, file)
+			log.info("Wrote " + file.getAbsolutePath)
+		}
+	}
+
   lazy val standardSettingsNexus = Defaults.defaultSettings ++ Seq(
+    makePom <<= (ivyModule, makePomConfiguration, streams) map { (module, config, s) => overrideMakePom(module, config, s.log); config.file },
     unmanagedSourceDirectories in Compile <+= baseDirectory(_/"src"),
     unmanagedSourceDirectories in Test <+= baseDirectory(_/"tests"),
     unmanagedResourceDirectories in Test <+= baseDirectory(_/"test-resources"),
@@ -63,11 +71,19 @@ object StarlingBuild extends Build{
     scalaVersion := "2.9.1",
     showLibsTask,
     writeClasspathScriptTask,
+    deployClasspathTask,
     credentialsSetting,
     publishSetting,
     resolvers += "Non-Trafigura Public Repositories" at "http://nexus.global.trafigura.com:8081/nexus/content/groups/mirror/",
     resolvers += "trafigura" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/tooling-releases/",
-    resolvers += "Titan Cross Stream Snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/titan-cross-stream-snapshots/",
+    resolvers += "titan-cross-stream-snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/titan-cross-stream-snapshots/",
+    resolvers += "tooling-snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/tooling-snapshots/",
+    resolvers += "trademgmt-bindeps-releases" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/trademgmt-bindeps-releases/",
+    resolvers += "trademgmt-bindeps-snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/trademgmt-bindeps-snapshots/",
+    resolvers += "logistics-bindeps-releases" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/logistics-bindeps-releases/",
+    resolvers += "logistics-bindeps-snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/logistics-bindeps-snapshots/",
+    resolvers += "referencedata-bindeps-releases" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/referencedata-bindeps-releases/",
+    resolvers += "referencedata-bindeps-snapshots" at "http://nexus.global.trafigura.com:8081/nexus/content/repositories/referencedata-bindeps-snapshots/",
     organizationName := "Trafigura",
     version := starlingVersion,
     shellPrompt  := ShellPrompt.buildShellPrompt
@@ -116,7 +132,7 @@ object StarlingBuild extends Build{
     "net.liftweb" % "lift-json_2.9.0" % "2.4-M2",
     "cglib" % "cglib-nodep" % "2.2" withSources(),
     "joda-time" % "joda-time" % "1.6" withSources(),
-    "com.rabbitmq" % "amqp-client" % "1.7.2" withSources(),
+    "com.rabbitmq" % "amqp-client" % amqpVersion withSources(),
     "log4j" % "log4j" % "1.2.16" withSources(),
     "org.slf4j" % "slf4j-log4j12" % "1.6.1" withSources(),
     "com.google.collections" % "google-collections" % "1.0" withSources(),
@@ -218,51 +234,25 @@ object StarlingBuild extends Build{
     settings = standardSettingsNexus ++ (libraryDependencies ++= mathsDependencies)
   ) dependsOn(quantity % testDependency, daterange % testDependency)
 
-
-  val titanModelDependencies = Seq(
+  val starlingApiDependencies = Seq(
+    "com.trafigura.titan" % "model-logistics-public-scala-bindings" % "1.0",
+    "com.trafigura.titan" % "model-trademgmt-public-scala-bindings" % "1.0",
     "org.slf4j" % "slf4j-api" % "1.6.1",
     "dom4j" % "dom4j" % "1.6.1",
-    "com.rabbitmq" % "amqp-client" % "1.7.2",
+    "com.rabbitmq" % "amqp-client" % amqpVersion,
     "joda-time" % "joda-time" % "1.6",
     "org.codehaus.jettison" % "jettison" % "1.1",
     "commons-httpclient" % "commons-httpclient" % "3.1",
     "com.trafigura.tradinghub" % "scala-hub-support" % "2.17",
     "com.trafigura.tradinghub" % "persistence-support" % "2.17",
-    "org.jboss.resteasy" % "jaxrs-api" % "1.2.GA"
+    "org.jboss.resteasy" % "jaxrs-api" % "2.2.2.GA"
   )
 
-  import TitanModel._
-  lazy val titanModel = Project(
-    "titan-model", 
-    modelRoot,
-    settings = standardSettingsNexus ++ Seq(
-      unmanagedSourceDirectories in Compile <+= baseDirectory(_/"model-src"),
-      cleanGenSrcTask := cleanGenSrc, 
-      cleanCopiedSrcTask := cleanCopiedSrc, 
-      clean <<= clean.dependsOn(cleanGenSrcTask, cleanCopiedSrcTask),
-      buildSrcTask := buildSource,
-      compile in Compile <<= (compile in Compile).dependsOn(buildSrcTask),
-      libraryDependencies ++= titanModelDependencies
-    ) 
-    ++ copyModelSettings
-  )
-
-  lazy val starlingApi = if (useTitanModelBinaries) {
-    Project(
-      "starling-api", 
-      file("./starling.api"),
-      settings = standardSettingsNexus ++
-        Seq(unmanagedJars in Compile <++= (baseDirectory) map titanBinaryJars) ++ 
-        Seq(unmanagedJars in Runtime <++= (baseDirectory) map titanBinaryJars) ++ 
-        Seq(unmanagedJars in Test <++= (baseDirectory) map titanBinaryJars)
-    ) dependsOn(titanReturnTypes)
-  } else {
-    Project(
-      "starling-api", 
-      file("./starling.api"),
-      settings = standardSettingsNexus
-    ) dependsOn(titanModel, titanReturnTypes)
-  }
+  lazy val starlingApi = Project(
+    "starling-api",
+    file("./starling.api"),
+    settings = standardSettingsNexus ++ Seq(libraryDependencies ++= starlingApiDependencies)
+  ) dependsOn(titanReturnTypes)
 
   lazy val props = Project(
     "props",
@@ -318,8 +308,8 @@ object StarlingBuild extends Build{
     "com.google.collections" % "google-collections" % "1.0",
     "jxlayer" % "jxlayer" % "4.0",
     "jgoodies" % "looks" % "2.3.1",
-    "org.swinglabs" % "swingx-core" % "1.6.2-2",
-    "mig" % "miglayout" % "4.0" classifier "swing",
+    "org.swinglabs" % "swingx-core" % "1.6.2-2" withSources(),
+    "mig-swing" % "miglayout" % "4.0",
     "net.java.dev.timingframework" % "timingframework" % "1.0",
     "transloader" % "transloader" % "0.4",
     "starling-external-jars" % "org.eclipse.mylyn.wikitext.core" % "1.4" classifier "e3x",
@@ -395,7 +385,7 @@ object StarlingBuild extends Build{
   lazy val starlingClient = Project(
     "starling-client",
     file("./starling.client"),
-    settings = standardSettingsNexus
+    settings = standardSettingsNexus ++ Seq(libraryDependencies ++= starlingApiDependencies)
   ) dependsOn(starlingApi, bouncyrmi)
 
   val dbxDependencies = Seq(
@@ -437,25 +427,12 @@ object StarlingBuild extends Build{
     settings = standardSettingsNexus
   ) dependsOn(rabbitEventViewerApi, pivot, databases, manager)
 
-  lazy val titan = if (useTitanModelBinaries){
-		Project(
-				"titan", 
+  lazy val titan = Project(
+				"titan",
 				file("./titan"),
-					settings = standardSettingsNexus ++
-						Seq(unmanagedJars in Compile <++= (baseDirectory) map titanBinaryJars) ++ 
-						Seq(unmanagedJars in Runtime <++= (baseDirectory) map titanBinaryJars) ++ 
-						Seq(unmanagedJars in Test <++= (baseDirectory) map titanBinaryJars)
+				settings = standardSettingsNexus ++ Seq(libraryDependencies ++= starlingApiDependencies)
 			) dependsOn(curves % "test->test", databases)
-	} else {
-		Project(
-				"titan", 
-				file("./titan"),
-				settings = standardSettingsNexus
-			) dependsOn(curves % "test->test", titanModel, databases)
-	}
 
-  def titanBinaryJars(base : File) : Seq[Attributed[File]] = (((base / "../lib/titan-model-jars") ** "*.jar")).getFiles.map{f : File => Attributed.blank(f)}
-  
   val servicesDependencies = Seq(
     "javax.mail" % "mail" % "1.4",
     "org.mortbay.jetty" % "jetty" % "6.1.26",
@@ -511,7 +488,7 @@ object StarlingBuild extends Build{
     "launcher", 
     file("./launcher"),
     settings = standardSettingsNexus
-  ) dependsOn(startserver, gui, singleClasspathManager)
+  ) dependsOn(startserver, gui, singleClasspathManager, booter)
 
   val webserviceDependencies = Seq(
     "javax.servlet" % "servlet-api" % "2.5",
@@ -519,7 +496,12 @@ object StarlingBuild extends Build{
     "org.mortbay.jetty" % "jetty" % "6.1.26",
     "org.mortbay.jetty" % "jetty-util" % "6.1.26",
     "com.thoughtworks.paranamer" % "paranamer" % "2.3",
-    "org.jboss.resteasy" % "resteasy-jaxrs" % "2.2.2.GA"
+    "org.jboss.resteasy" % "resteasy-jaxrs" % "2.2.2.GA",
+    "net.databinder" %% "dispatch-http" % "0.8.6" withSources(),
+    "net.databinder" %% "dispatch-core" % "0.8.6" withSources(),
+    "org.apache.httpcomponents" % "httpclient" % "4.1.2",
+    "org.apache.httpcomponents" % "httpcore" % "4.1.2",
+    "commons-logging" % "commons-logging" % "1.1.1"
   )
 
   lazy val webservice = Project(
@@ -530,27 +512,12 @@ object StarlingBuild extends Build{
 
   // Evil hack so that I can get a classpath exported including the test-classes of all projects.
   // See bin/write-classpath-script.sh
-  lazy val dummy = if (useTitanModelBinaries) {
-    Project(
-      "dummy",
-      file("./dummy-sbt-vim-hack"),
-      settings = standardSettingsNexus ++
-        Seq(unmanagedClasspath in Compile <++= (baseDirectory) map titanBinaryJars) ++ 
-        Seq(unmanagedClasspath in Test <++= (baseDirectory) map titanBinaryJars)
-    ) dependsOn(
-      childProjects.map(_ % "test->test") : _*
-    )
-  } else {
-    Project(
-      "dummy",
-      file("./dummy-sbt-vim-hack"),
-      settings = standardSettingsNexus
-    ) dependsOn(
-      childProjects.map(_ % "test->test") : _*
-    )
-  }
+  lazy val dummy = Project(
+    "dummy",
+    file("./dummy-sbt-vim-hack"),
+    settings = standardSettingsNexus
+  ) dependsOn(childProjects.map(_ % "test->test") : _*)
 
-  def titanModelReference : List[ProjectReference] = if (useTitanModelBinaries) Nil else List(titanModel) 
   def otherProjectRefereneces : List[ProjectReference] = List(
     booter,
     utils, 
@@ -595,7 +562,7 @@ object StarlingBuild extends Build{
     tradeImpl
   )
 
-  def childProjects : List[ProjectReference] =  otherProjectRefereneces ::: titanModelReference
+  def childProjects : List[ProjectReference] =  otherProjectRefereneces
 
   val docProjects : List[ProjectReference] =  List(
     utils, 
@@ -633,11 +600,10 @@ object StarlingBuild extends Build{
     props,
     rabbitEventViewerApi, rabbitEventViewerService, 
     reportsFacility, reportsImpl, tradeImpl, metals,
-    titanModel, 
     tradeFacility)
 
   val sharedProjects : List[ProjectReference] =  List(
-      utils, quantity, daterange, titanReturnTypes, titan, titanModel, databases, starlingApi)
+      utils, quantity, daterange, titanReturnTypes, titan, databases, starlingApi)
   
   val allPackagedArtifacts = TaskKey[Seq[Map[Artifact, File]]]("all-packaged-artifacts")
   val allSources           = TaskKey[Seq[Seq[File]]]("all-sources")
@@ -672,75 +638,6 @@ object StarlingBuild extends Build{
     )
 
   val root = Project("starling", file("."), settings = standardSettingsNexus) aggregate (childProjects : _*)
-
-  object TitanModel {
-    import IO._
-    val modelGenSrcDir = file("titan-scala-model/model-src/main/scala/")
-    val copiedSrcDir = file("titan-scala-model/src")
-    val modelRoot = file("titan-scala-model")
-    def cleanGenSrc = IO.delete(modelGenSrcDir)
-    def cleanCopiedSrc = IO.delete(copiedSrcDir) 
-    val cleanGenSrcTask = TaskKey[Unit]("clean-src", "Clean model generated sources")
-    val cleanCopiedSrcTask = TaskKey[Unit]("clean-copied-src", "Clean sources copied from model")
-    val buildSrcTask = TaskKey[Unit]("build-src", "Build sources from model")
-     
-    val copyModelJarForIdea = TaskKey[Unit]("copy-model", "copy the edm model to the stored location in Git that is referenced by IntelliJ IDEA")
-
-    lazy val copyModelSettings : Seq[sbt.Project.Setting[_]] = Seq(
-      copyModelJarForIdea <<= (packageBin in Compile) map(_ => copyModelJar)
-    )
-
-    def copyModelJar {
-      val srcFile = new File(modelRoot + "/target/scala-2.9.1/titan-model_2.9.1-0.1.jar")
-      val destFile = new File("./lib/titan-model-jars/scala-model-with-persistence.jar")
-      println("copying target jar %s to %s".format(srcFile, destFile))
-      val r = copyFile(srcFile, destFile)
-      println("copied model jar")
-      r
-    }
-
-    def buildSource {
-      lazy val buildUsingBinaryTooling = true
-      lazy val rubyModelPathFinder = {
-        (new File(modelRoot, "/../../../model/model/")** "*.rb")
-      }
-      
-      def latestRubyFileTime = {
-        val files = rubyModelPathFinder.getFiles
-        if (files.isEmpty)
-          throw new Exception("No ruby files found")
-        files.map(_.lastModified).toList.sort(_>_).head
-      }
-      
-      def earliestScalaFileTime = {
-        (modelGenSrcDir ** "*.scala").getFiles.toList.map(_.lastModified).sort(_<_) match {
-          case Nil => None
-          case t :: _ => Some(t)
-        }
-      }
-
-      val toolingLauncher = if (buildUsingBinaryTooling == true) new File(modelRoot, "../../../mdl/bindinggen.rb") else new File(modelRoot, "/model/tooling/binding-generator/thubc.rb")
-
-      val generateModelMainSourceCmd = new java.lang.ProcessBuilder("ruby", toolingLauncher.getAbsolutePath, "-o", modelGenSrcDir.getAbsolutePath, "-b", "../../../mdl/starling/bindings.rb", "../../../mdl/starling/model.rb") directory modelRoot
-
-      lazy val nonModelSourcePath = new File(modelRoot, "src")
-      def copyNonModelSource  = {
-        if (! (nonModelSourcePath.exists)) {
-          val originalSourcePath = new File(modelRoot, "../../../model/model/scala-model-with-persistence/src/")
-          copyDirectory(originalSourcePath, nonModelSourcePath)
-          val hibernateBean = new File (modelRoot, "/src/main/scala/com/trafigura/refinedmetals/persistence/CustomAnnotationSessionFactoryBean.scala")
-          //println("***** DEBUG ***** path " + hibernateBean.getAbsolutePath + ", " + hibernateBean.exists + ", " + hibernateBean.canWrite) 
-          if (hibernateBean.exists && hibernateBean.canWrite) hibernateBean.delete()
-        }
-        None
-      }
-
-      (latestRubyFileTime, earliestScalaFileTime) match {
-        case (t_ruby, Some(t_scala)) if t_ruby < t_scala => 
-        case _ => copyNonModelSource; generateModelMainSourceCmd !; 
-      }      
-    }
-  }
 
   /**
    * Some utils to help abstract from the unintuitive SBT DSL, for more "common" cases/patterns
@@ -784,6 +681,36 @@ object StarlingBuild extends Build{
       val resourceDirs = cp.map(_.data).getFiles.toList.map(_.getPath).filter(_.endsWith("/classes")).map{s => s.replace("/classes", "/resources")}
       file.println("export CLASSPATH=" + (cp.map(_.data).getFiles.toList ::: resourceDirs).mkString(":"))
       file.println("export JAVA_OPTS='-server -XX:MaxPermSize=1024m -Xss512k -Xmx6000m'")
+      file.close()
+      None
+    }
+
+    val deployClasspath = TaskKey[Unit]("deploy-classpath")
+    val deployClasspathTask = deployClasspath <<= (fullClasspath in Compile) map { cp =>
+      import java.io._
+      val file = new PrintWriter(new FileOutputStream(new File("bin/deploy-classpath.sh")))
+
+      val workingDirectory = System.getProperty("user.dir") + "/"
+      val userHome = System.getProperty("user.home")
+      val ivyHome = userHome + "/.ivy2"
+
+      val classpathFiles = cp.map(_.data).getFiles.map(_.getPath).toList.filterNot(p => {
+        p.endsWith("/lib/scala-library.jar") || p.endsWith("/lib/scala-compiler.jar")
+      })
+      val resourcesFiles = classpathFiles.filter(_.endsWith("/classes")).map{s => s.replace("/classes", "/resources")}.toList
+      val allPaths = classpathFiles ::: resourcesFiles
+
+      val (externalLibraryJarPaths, starlingPaths) = allPaths.partition(_.startsWith(ivyHome))
+
+      val relativeStarlingPaths = starlingPaths.map(_.replaceFirst(workingDirectory, ""))
+
+      val relativeExternalLibraryJarPaths = externalLibraryJarPaths.map(_.replaceFirst(userHome, "\\$HOME"))
+
+      val allRelativePaths = "lib/scala/lib_managed/scala-library-jar-2.9.1.jar" :: "lib/scala/lib_managed/scala-swing-jar-2.9.1.jar" :: relativeStarlingPaths ::: relativeExternalLibraryJarPaths
+
+      file.println("export CLASSPATH=" + allRelativePaths.mkString(":"))
+      file.println("export JAVA_OPTS='-server -XX:MaxPermSize=256 -Xmx6000m'")
+                  
       file.close()
       None
     }
